tried to fix overflow, didnt fix  :(

--- a/assets/style.css
+++ b/assets/style.css
@@ -6,45 +6,59 @@
     /* border: 1px solid red; */
 }
 
-header, main{
+.web-app{
+    height: 100vh;
+    /* border: 5px solid red; */
+}
+
+html{
+    font-family: sans-serif;
+}
+
+img{
+    display: block;
+}
+
+.top-right, .center {
     background-color: black;
 }
 
-header div{
-    color: white;
-    margin-top: 5px;
+
+.top-right{
+    width: 100%;
+    height: 60px;
+    
     display: flex;
     justify-content: flex-end;
-
-    position: fixed;
-    width: 100%;
+    align-items: center;
+    padding-right: 20px;
 }
 
-header div span{
+.top-right button{
+    display: flex;
+    align-items: center;
     background-color: rgba(128, 128, 128, 0.50);
     padding: 10px;
     margin-inline: 10px;
     border-radius: 10px;
+    color: white;
+    border: 0;
 }
 
-.container {
+.center {
+
+    height: calc(100% - ( 60px + 100px ) );
     display: flex;
     flex-wrap: wrap;
+    align-items: center;
     justify-content: center;
-    padding-bottom: 50px;
+    padding: 30px;
+    overflow: auto;
+    gap: 20px;
 }
   
 .image-container {
-    display: flex;
     position: relative;
-    margin-block: 60px;
-}
-  
-.image-container img {
-    max-width: 100%; 
-    height: auto; 
-    padding: 10px;
-
 }
 
 .status{
@@ -55,11 +69,10 @@ header div span{
     color: white;
     background-color: rgba(128, 128, 128, 0.50);
     padding: 10px;
-    margin: 10px;
 }
 
 footer{
-    height: 150px;
+    height: 100px;
     width: 100%;
 
     display: flex;
@@ -70,10 +83,11 @@ footer{
 
     background-color: #222222;
     color: white;
-    /* padding: 20px; */
+    
 }
 
 footer span{
+    
     display: block;
     padding-block: 10px;
     text-transform: capitalize;
@@ -87,6 +101,7 @@ footer span{
     gap: 20px;
 
     align-items: center;
+    padding-inline: 50px;
 }
 
 .bottom-left div,
